# chain-microservices

./: README.md  docker-compose.yml
auth/: Cargo.toml  README.md  auth.docker-compose.yml  buf.gen.yaml  build.rs  cache.docker-compose.yml
auth/migrations/2024-04-21-082845_create-user-table/: up.sql
auth/migrations/2024-04-24-045612_alter_user_username_unique/: down.sql  up.sql
auth/proto/: auth.proto  client.proto  message.proto
auth/src/: main.rs  schema.rs
auth/src/models/: mod.rs  user.rs
auth/src/protos/: mod.rs
auth/src/services/: auth.rs  authentication.rs  db.rs  mod.rs
auth/src/services/auth/: protos.rs
auth/src/services/authentication/: authentication.rs  generate.rs  messages.rs  mod.rs  verify.rs
auth/src/services/client/: client.rs
auth/src/services/message/: message.rs
auth/src/services/redis/: connect.rs  mod.rs  redis.rs
report/: .env  .gitignore  report.docker-compose.yml  schema-registry.docker-compose.yml
report/report-service/: config.py
report/report-service/app/: __init__.py
report/report-service/app/models/job/message_broker/: _job_consumer_service.py
report/report-service/app/models/report/grpc/: _report_grpc_service.py
report/report-service/keys/: access_token.public.pem
