[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ['full'] }
tonic-reflection = "0.11"
tonic-web = "0.11"
tower-http = { version = "0.4", features = ["cors"] }
diesel = { version = "2.1.3", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
bcrypt = "0.15.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
serde = "1.0.190"

[build-dependencies]
tonic-build = "0.11"
